# frecency

./: HISTORY.rst  Makefile  pyproject.toml  requirements.txt  setup.py  shell.nix
scripts/: create_github_release.py
